--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "examvue",
+  "name": "examvuejs",
   "version": "1.0.0",
   "description": "A simple client Vue",
   "main": "app.js",
@@ -18,5 +18,14 @@
     "popper.js": "^1.14.6",
     "vue": "^2.5.22",
     "vue-resource": "^1.5.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SalvatoreBonaccorso/ProjectClientVue.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SalvatoreBonaccorso/ProjectClientVue/issues"
+  },
+  "homepage": "https://github.com/SalvatoreBonaccorso/ProjectClientVue#readme"
 }
